# microservice-grpc-rust

./: .env.example  Cargo.toml  build.rs
src/modules/amqp/: main.rs
