[package]
name = "microservice-grpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] 
name = "microservice-grpc-rust-server"
path = "src/server.rs"

[[bin]]
name = "microservice-grpc-rust-client"
path = "src/client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
protoc = "2.28.0"

[build-dependencies]
tonic-build = "0.9"


